# Stochastic_Dynamics_of_Cell_Growth

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
include/: benchmark_runner.hpp  utils.hpp
include/models/: cell_mass.hpp  inference.hpp  yule_process.hpp
scripts/: plot_inference.py  plot_mass.py  plot_yule.py  test_integration.py
src/: benchmark_runner.cpp  main.cpp  utils.cpp
src/models/: cell_mass.cpp  inference.cpp  yule_process.cpp
